--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,22 +14,23 @@
  * limitations under the License.
  *@
 
-@(title: String)(content: Html)
+ 
+@(title: String, bodyClass : String = "", scripts : Html = play.twirl.api.Html(""))(content: Html)
 
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
     <head>
-        @* Here's where we render the page title `String`. *@
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        @scripts
     </head>
-    <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
+    <body class="@bodyClass">
         @content
-
-      <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
