--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,22 +14,82 @@
  * limitations under the License.
  *@
 
-@(title: String)(content: Html)
+ @import play.api.i18n.Messages
+ @import play.api.mvc.RequestHeader
+ @import play.twirl.api.Html
+ @import org.webjars.play.WebJarsUtil
+ @import controllers.AssetsFinder
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        @* Here's where we render the page title `String`. *@
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+ @(title: String, user: Option[models.User])(content: Html)(implicit request: RequestHeader, messages: Messages, assets: AssetsFinder, webJarsUtil: WebJarsUtil)
 
-    </head>
-    <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
-        @content
-
-      <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
-    </body>
-</html>
+ <!DOCTYPE html>
+ <html lang="en">
+     <head>
+         <meta charset="utf-8">
+         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <title>@title</title>
+         @Html(webJarsUtil.css("bootstrap.min.css"))
+         @Html(webJarsUtil.css("bootstrap-theme.min.css"))
+         <link rel="stylesheet" href="@assets.path("stylesheets/main.css")">
+         <link rel="shortcut icon" type="image/png" href="@assets.path("images/favicon.ico")">
+             <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+             <!--[if lt IE 9]>
+             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+             <![endif]-->
+     </head>
+     <body>
+         <header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+             <div class="container">
+                 <div class="navbar-header">
+                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                         <span class="sr-only">@messages("toggle.navigation")</span>
+                         <span class="icon-bar"></span>
+                         <span class="icon-bar"></span>
+                         <span class="icon-bar"></span>
+                     </button>
+                     <a class="navbar-brand" href="@controllers.routes.ApplicationController.index">Module Directory</a>
+                 </div>
+                 <nav class="collapse navbar-collapse">
+                     <ul class="nav navbar-nav">
+                         <li><a href="@controllers.routes.ApplicationController.index">@messages("home")</a></li>
+                     </ul>
+                     <ul class="nav navbar-nav navbar-right">
+                         @user.map { u =>
+                             <li><a href="@controllers.routes.ApplicationController.modules">@u.name</a></li>
+                             <li><a href="@controllers.routes.ApplicationController.signOut">@messages("sign.out")</a></li>
+                         }.getOrElse {
+                             <li><a href="@controllers.routes.ApplicationController.signIn">@messages("sign.in")</a></li>
+                         }
+                     </ul>
+                 </nav>
+             </div>
+         </header>
+         <main class="container">
+             <div class="starter-template row">
+                 @request.flash.get("error").map { msg =>
+                     <div class="col-md-6 col-md-offset-3 alert alert-danger">
+                         <a href="#" class="close" data-dismiss="alert">&times;</a>
+                         <strong>@messages("error")</strong> @msg
+                     </div>
+                 }
+                 @request.flash.get("info").map { msg =>
+                     <div class="col-md-6 col-md-offset-3 alert alert-info">
+                         <a href="#" class="close" data-dismiss="alert">&times;</a>
+                         <strong>@messages("info")</strong> @msg
+                     </div>
+                 }
+                 @request.flash.get("success").map { msg =>
+                     <div class="col-md-6 col-md-offset-3 alert alert-success">
+                         <a href="#" class="close" data-dismiss="alert">&times;</a>
+                         <strong>@messages("success")</strong> @msg
+                     </div>
+                 }
+                 @content
+             </div>
+         </main>
+         @Html(webJarsUtil.script("jquery.min.js"))
+         @Html(webJarsUtil.script("bootstrap.min.js"))
+     </body>
+ </html>
